# cookiecutter-haskell-nix

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_slug}}/: {{cookiecutter.project_slug}}.cabal
{{cookiecutter.project_slug}}/.github/workflows/: ci.yml  heroku.yml
{{cookiecutter.project_slug}}/app/: Main.hs
{{cookiecutter.project_slug}}/nix/: docker.nix  extra-deps.nix  packages.nix  release.nix
{{cookiecutter.project_slug}}/src/: {{cookiecutter.project_module}}.hs
