cabal-version:      2.4
name:               {{cookiecutter.project_slug}}
version:            0.1.0.0

synopsis: {{cookiecutter.project_short_description}}
{% if cookiecutter.is_open_source == 'y' -%}
description: See README at <https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}>
{% endif %}

{% if cookiecutter.is_open_source == 'y' -%}
license-file: LICENSE
{% endif %}
author:             {{cookiecutter.author}}
maintainer:         {{cookiecutter.email}}
{% if cookiecutter.is_open_source == 'y' -%}
bug-reports: https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}/issues
{% endif %}

extra-source-files: 
{% if cookiecutter.is_open_source == 'y' -%}
    LICENSE
{% endif %}
    README.md

{% if cookiecutter.is_open_source == 'y' -%}
source-repository head
    type: git
    location: https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.project_slug}}
{% endif %}

-- Inspired by:
-- https://github.com/tchoutri/pg-entity/blob/e5fc4cfe8fcaf2a5a6d76f983c9a60b25a57777a/pg-entity.cabal 
common common-extensions
    default-extensions:
        DerivingStrategies
        DerivingVia
        DeriveGeneric
        DataKinds
        GeneralizedNewtypeDeriving
        NamedFieldPuns
        OverloadedStrings  
        TypeOperators
    default-language: Haskell2010

common common-ghc-options
    ghc-options: -Wall -Wcompat -Widentities -Wincomplete-record-updates -Wincomplete-uni-patterns -Wpartial-fields -Wredundant-constraints

library
    import: common-extensions
    import: common-ghc-options
    exposed-modules: 
      {{cookiecutter.project_module}} 
    build-depends:    
      base >= 4.13 && <= 4.17
      , containers
      , time
      , bytestring
      , text
      {% if cookiecutter.is_lib != 'n' -%}
      , directory
      , optparse-applicative
      {% endif %}
      {% if cookiecutter.is_webapp == 'y' -%}
      , http-api-data
      , http-types
      , lucid
      , servant
      , servant-lucid
      , servant-server
      , wai
      , wai-enforce-https
      , warp
      , colourista
      , envparse
      -- alternative to interpolate 
      , PyF
      --, raven-haskell -- client for sentry.io
      --, text-display -- user-facing output
      , wai-logger
      , wai-middleware-static 
      -- from geocode.city
      , fused-effects
      {% endif %}

    hs-source-dirs:   src

{% if cookiecutter.has_executable == 'y' -%}
executable {{cookiecutter.project_slug}}-exe
    main-is: Main.hs
    build-depends:
      base
      , {{cookiecutter.project_slug}}
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
    default-language:    Haskell2010
{% endif %}
